<resources>
    <string name="app_name">MyChatApp</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="login_to_continue">登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="create_account">创建账户?</string>
    <string name="creating_account">创建账户</string>
    <string name="add_image">添加头像</string>
    <string name="not_send_msg" translatable="false">...</string>
    <string name="hold_to_speak">按住说话</string>
    <string name="exit">退出登录</string>
    <string name="no_data_info">暂无任何信息哦~~~</string>
    <string name="blacklist_friend">拉黑</string>
    <string name="delete_friend">删除</string>
    <string name="friend">好友</string>
    <string name="chat_history">聊天记录</string>
    <string name="group">群组</string>
    <string name="choose_user_chat">请选择用户进行聊天</string>
    <string name="apply">申请</string>
    <string name="apply_info">申请信息</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="server_address">服务器地址</string>
    <string name="server_port">端口</string>
    <string name="info_login_success">登录成功</string>
    <string name="info_login_fail">登录失败</string>
    <string name="info_register_success">注册成功</string>
    <string name="info_register_fail">注册失败</string>
    <string name="info_upload_success">上传成功</string>
    <string name="info_upload_fail">上传失败</string>
    <string name="info_load_fail">加载失败</string>
    <string name="info_application_fail">申请成功</string>
    <string name="info_act_fail">操作失败，请稍后再试</string>
    <string name="info_not_sure_apply">确定申请该用户?</string>
    <string name="info_send_failed_check_network">发送失败，请检查网络设置！</string>
    <string name="info_start_downloading">开始下载</string>
    <string name="info_download_complete">下载完成</string>
    <string name="info_check_input">请检查输入</string>
    <string name="info_check_password_mismatch">两次密码输入不一致，请检查输入</string>
    <string name="info_blocked_successfully">拉黑成功</string>
    <string name="info_delete_successfully">删除成功</string>
    <string name="info_operation_successful">操作成功</string>
    <string name="info_add_failed">添加失败</string>
    <string name="info_network_error_add_failed_try_again">网络异常，添加失败，请稍后再试</string>
    <string name="username">昵称</string>
    <string name="password_confirm">确认密码</string>
    <string name="login_account">登录账户?</string>
    <string name="info_logout">退出登录?</string>
    <string name="info_confirm_block_user">确定拉黑该用户?</string>
    <string name="info_confirm_delete_user">确定删除该用户?</string>
    <string name="info_applied">已申请</string>
    <string name="info_confirm_deleting_users">确定删除这些用户?</string>
    <string name="info_confirm_delete">确定删除?</string>
    <string name="info_confirm_add_as_friend">确定同意添加对方为好友?</string>
    <string name="info_refuse">拒绝</string>
    <string name="info_no_search_results_found">暂无任何搜索结果~~</string>
    <string name="info_go_search_and_add">快去搜索添加吧~~~</string>
    <string name="blacklist">黑名单</string>
    <string name="no_result">无</string>
    <string name="setting">设置</string>
    <string name="language">语言</string>
</resources>