<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <FrameLayout
            android:id="@+id/header_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_58sdp"
                android:layout_height="@dimen/_58sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />
        </FrameLayout>

        <View
            android:id="@+id/viewSupporter"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/header_profile"
            app:layout_constraintStart_toEndOf="@id/header_profile"
            app:layout_constraintTop_toTopOf="@id/header_profile" />

        <LinearLayout
            android:id="@+id/NameWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/viewSupporter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_profile">

            <TextView
                android:id="@+id/applyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="xxxxxxxxx"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_profile"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="邮箱："
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/applyEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="xxx@.com"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_sendApply"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_btn_apply"
            android:padding="@dimen/_2sdp"
            android:text="@string/apply"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/emailWrapper"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/applyWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/header_profile">

            <EditText
                android:id="@+id/applyInfo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:hint="@string/apply_info"
                android:imeOptions="actionNone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sureApply"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sureApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_btn_apply"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/confirm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancelApply"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cancelApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_btn_delete"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>