<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.mychatapp.viewmodel.UserViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/primary"
        tools:context=".activities.UserActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_9sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_user_chat"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_batch_manger"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_batch_manager"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_content_bottom"
            app:layout_constraintBottom_toTopOf="@id/bottomActionBar"
            app:layout_constraintTop_toBottomOf="@id/img_back">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userRecycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:padding="@dimen/_10sdp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/textErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:gravity="center"
                android:text="快去搜索添加吧~~~"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12ssp"
                android:visibility="@{vm.hasFriend ? View.INVISIBLE : View.VISIBLE}" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottomActionBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:background="@color/primary"
            android:gravity="end|center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/blacklist_friend_btn"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/background_btn_blacklist"
                android:padding="@dimen/_5sdp"
                android:text="@string/blacklist_friend"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/delete_friend_btn"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/background_btn_delete"
                android:padding="@dimen/_6sdp"
                android:text="@string/delete_friend"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>